syntax = "proto3";

option go_package = "./proto";

// Empty message from the Google Protobuf package
 import "google/protobuf/empty.proto";

service UserService {
    rpc UpdateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
}

message UpdateUserRequest {
    string first_name   = 1;
    string last_name    = 2;
    string password     = 3;
}

message User {
    int64 ID            = 1;
    string first_name   = 2;
    string last_name    = 3;
    string email        = 4;
    bool active         = 5;
    bool admin          = 6;
    string created_at   = 7;
    string updated_at   = 8;
}

message GetUsersRequest {
    int64 limit     = 1;
    string cursor   = 2;
}

message GetUsersResponse {
    repeated User users = 1;
    string next_cursor  = 2;
}
